# src/static/swagger.yaml
@@ -375,7 +375,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /api/predictions:
+  /predictions:
     get:
       tags:
         - Data Analytics
@@ -453,7 +453,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /api/statistics:
+  /statistics:
     get:
       tags:
         - Data Analytics
@@ -495,7 +495,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /api/export:
+  /export:
     post:
       tags:
         - Data Analytics
